# minimax-m2.1-deploy-and-test

./: .env.example  .gitignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml  k8s-deployment.yaml
docs/: PROPOSAL.md  RESEARCH_INTEGRITY.md
docs/ANTI_PATTERNS/: INIT_WANDB_BASELINE.md
scripts/: deploy_vllm.sh  init_wandb_baseline.py  run_benchmark.py  setup_lambda.sh
src/minimax_deploy/: __init__.py  api.py  benchmark.py  cli.py  client.py  config.py  secrets.py  wandb_logger.py
